Exempt Income alignment issues fixed

--- a/src/app/modules/itr-filing/exempt-income/exempt-income.component.scss
+++ b/src/app/modules/itr-filing/exempt-income/exempt-income.component.scss
@@ -44,6 +44,11 @@
   position: relative;
 }
 
+.form-control {
+  min-height:0px!important;
+  background-color:#fafafa!important;
+}
+
 .space {
   background-color: #ffffff;
   border-radius: 0px 0px 8px 8px;
